feat: single transaction for each backend operation (#119, RDFA-355)
* feat(RDFA-355): single transaction, changelog improvements, undo/redo refactoring

- introduced GraphContext and VersionControl interfaces
- moved undo/redo/restore from DatabasePort into VersionControl (part of GraphContext)
- improved changelog messages and fixed transaction bugs
- replaced string UUIDs with actual UUID class
- added DL initialization for fetch-from-database graphs
- fixed bug where exporting was not possible
- fixed bug where associations couldn't be restored in changelog
Fix property shapes for DanglingReferences  and IdentofiedObject to use correct path and targetSubjectsOf instead of sh:targetNode